--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
         "autoprefixer": "^10.4.14",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.23",
+        "sass": "^1.71.1",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "alpinejs": "^3.13.5"
     }
 }
